# todo-list-api

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  testdb.db
src/: auth.py  database.py  dependencies.py  models.py  orm_models.py  routes.py  utils.py
